send string public key

--- a/src/app/components/recomendations/recomendations.component.html
+++ b/src/app/components/recomendations/recomendations.component.html
@@ -4,3 +4,4 @@
 <div>{{encryptedCapsule}}</div>
 <button (click)="getCapsuleFromServer()">get encrypted capsule</button>
 <div>{{rekey}}</div>
+<button (click)="getTokenReKey()">get Token</button>
